--- a/TOP/foundations-js/ls1/index.html
+++ b/TOP/foundations-js/ls1/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JS</title>
+    <link href="styles.css" rel="stylesheet">
+    <script src="javascript.js"></script>
+</head>
+<body>
+    <div class="hello">Hello world</div>
+</body>
+</html>
