--- a/TOP/foundations-js/ls2/index.html
+++ b/TOP/foundations-js/ls2/index.html
@@ -8,6 +8,8 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    
+    <div class="center">
+        <div>GENG</div>
+    </div>
 </body>
 </html>
