--- a/TOP/foundations-js/ls3/index.html
+++ b/TOP/foundations-js/ls3/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="center">
-        <div>GENG</div>
+        <div>Studied chrome dev tools</div>
     </div>
 </body>
 </html>
