--- a/TOP/foundations-js/ls3/index.html
+++ b/TOP/foundations-js/ls3/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="center">
         <div>Studied chrome dev tools</div>
+        <div>never gonna let you go</div>
     </div>
 </body>
 </html>
