--- a/TOP/foundations-js/ls1/index.html
+++ b/TOP/foundations-js/ls1/index.html
@@ -8,7 +8,7 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <div class="hello">Hello world</div>
+    <div class="hello">Hello world!</div>
     <script>console.log(23+97)</script>
 </body>
 </html>
