--- a/TOP/foundations-js/ls1/index.html
+++ b/TOP/foundations-js/ls1/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS</title>
+    <title>Document</title>
     <link href="styles.css" rel="stylesheet">
-    <script src="javascript.js"></script>
 </head>
 <body>
-    <div class="hello">Hello world!</div>
-    <script>console.log(23+97)</script>
+    
 </body>
 </html>
