--- a/TOP/intermediate-html/ls1/index.html
+++ b/TOP/intermediate-html/ls1/index.html
@@ -9,5 +9,8 @@
     <article>Hello Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium magni vel culpa iure aspernatur doloribus maxime in, voluptatum ab, sunt, error atque recusandae molestias porro eum architecto tenetur esse odit!</article>
     <footer>Bitch dont kill my vibe</footer>
     <div>kimba</div>
+    <div>Hello my name is <mark>pussyboy</mark></div>
+    <div class="class-1 class-2" id="id-1"></div>
+    button[]
 </body>
 </html>
