--- a/TOP/intermediate-html/ls1/index.html
+++ b/TOP/intermediate-html/ls1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <article>Hello Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium magni vel culpa iure aspernatur doloribus maxime in, voluptatum ab, sunt, error atque recusandae molestias porro eum architecto tenetur esse odit!</article>
@@ -11,6 +12,46 @@
     <div>kimba</div>
     <div>Hello my name is <mark>pussyboy</mark></div>
     <div class="class-1 class-2" id="id-1"></div>
-    button[]
+    <div class="class1"></div>
+    <div class="class2"></div>
+    <div class="class3"></div>
+    <button type="button"></button>
+    <div data-selected=""></div>
+    <div style="color: red;"></div>
+    <div class="purple"><span class="cyan"></span></div>
+    <header>
+        <nav>
+            <ul></ul>
+        </nav>
+    </header>
+    <header>
+        <nav>
+            <ul>
+                <li>buuull</li>
+                <li>dadasdkk</li>
+                <li>kdakdsakd</li>
+            </ul>
+        </nav>
+    </header>
+    <header>
+        <h2>Heading</h2>
+        <nav>
+            <ol>
+                <li><a href="">Link 1</a></li>
+                <li><a href="">Link 2</a></li>
+                <li><a href="">Link 3</a></li>
+                <li><a href="">Link 4</a></li>
+                <li><a href="">Link 5</a></li>
+            </ol>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+    <input type="text" name="" id="">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+        <rect x=0 y=0 width=100 height=50 />
+        <circle class="svg-circle" cx="50" cy="50" r="10"/>
+      </svg>
+    
 </body>
 </html>
