--- a/TOP/intermediate-html/ls1/index.html
+++ b/TOP/intermediate-html/ls1/index.html
@@ -4,55 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <article>Hello Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium magni vel culpa iure aspernatur doloribus maxime in, voluptatum ab, sunt, error atque recusandae molestias porro eum architecto tenetur esse odit!</article>
-    <footer>Bitch dont kill my vibe</footer>
-    <div>kimba</div>
-    <div>Hello my name is <mark>pussyboy</mark></div>
-    <div class="class-1 class-2" id="id-1"></div>
-    <div class="class1"></div>
-    <div class="class2"></div>
-    <div class="class3"></div>
-    <button type="button"></button>
-    <div data-selected=""></div>
-    <div style="color: red;"></div>
-    <div class="purple"><span class="cyan"></span></div>
-    <header>
-        <nav>
-            <ul></ul>
-        </nav>
-    </header>
-    <header>
-        <nav>
-            <ul>
-                <li>buuull</li>
-                <li>dadasdkk</li>
-                <li>kdakdsakd</li>
-            </ul>
-        </nav>
-    </header>
-    <header>
-        <h2>Heading</h2>
-        <nav>
-            <ol>
-                <li><a href="">Link 1</a></li>
-                <li><a href="">Link 2</a></li>
-                <li><a href="">Link 3</a></li>
-                <li><a href="">Link 4</a></li>
-                <li><a href="">Link 5</a></li>
-            </ol>
-        </nav>
-    </header>
-    <main></main>
-    <footer></footer>
-    <input type="text" name="" id="">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-        <circle class="svg-circle" cx="0" cy="0" r="10"/>
-        <rect x=0 y=0 width=100 height=50 />
-      </svg>
-    
+    <table>
+        <tr>
+            <th>balls 1</th>
+            <th>balls 2</th>
+            <th>balls 3</th>
+            <th>balls 4</th>
+        </tr>
+        <tr>
+            <td>penis 1</td>
+            <td>penis 2</td>
+            <td>penis 3</td>
+            <td>penis 4</td>
+        </tr>
+    </table>
+
+    <table>
+        <colgroup>
+          <col style="background-color: yellow" />
+        </colgroup>
+        <tr>
+          <th>Data 1</th>
+          <th>Data 2</th>
+        </tr>
+        <tr>
+          <td>Calcutta</td>
+          <td>Orange</td>
+        </tr>
+        <tr>
+          <td>Robots</td>
+          <td>Jazz</td>
+        </tr>
+    </table>
+    <script src="https://ottomated.net/js/globe.js"></script>
+
     
 </body>
 </html>
