--- a/TOP/intermediate-html/ls1/index.html
+++ b/TOP/intermediate-html/ls1/index.html
@@ -1,46 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <table>
-        <tr>
-            <th>balls 1</th>
-            <th>balls 2</th>
-            <th>balls 3</th>
-            <th>balls 4</th>
-        </tr>
-        <tr>
-            <td>penis 1</td>
-            <td>penis 2</td>
-            <td>penis 3</td>
-            <td>penis 4</td>
-        </tr>
-    </table>
-
-    <table>
-        <colgroup>
-          <col style="background-color: yellow" />
-        </colgroup>
-        <tr>
-          <th>Data 1</th>
-          <th>Data 2</th>
-        </tr>
-        <tr>
-          <td>Calcutta</td>
-          <td>Orange</td>
-        </tr>
-        <tr>
-          <td>Robots</td>
-          <td>Jazz</td>
-        </tr>
-    </table>
-    <script src="https://ottomated.net/js/globe.js"></script>
-
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Table template</title>
+    <link href="minimal-table.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <h1>Table template</h1>
     
-</body>
+
+
+  </body>
 </html>
