--- a/TOP/intermediate-html/ls1/index.html
+++ b/TOP/intermediate-html/ls1/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>Table template</h1>
+    <span class="table"></span>
+    <span id="code"></span>
+    <div class="class-1 class-2" id="id-1"></div>
     
 
 
