--- a/TOP/intermediate-html/ls1/index.html
+++ b/TOP/intermediate-html/ls1/index.html
@@ -8,16 +8,12 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Table template</h1>
-    <span class="table"></span>
-    <span id="code"></span>
-    <div class="class-1 class-2" id="id-1"></div>
-    <li><a href="">balls</b></a></li>
-    <li><a href="">balls</a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <div class="catto"><img src="https://preview.redd.it/my-brother-said-baobear-is-1-tuxedo-v0-lgc0cza5drbe1.jpg?width=2048&format=pjpg&auto=webp&s=95d338c2fedc866d79e3c31cdac92f2e3a167c54" alt="car"></div>
-
+    <header class="header">
+      <li class="number">1</li>
+      <li class="number">2</li>
+      <li class="number">3</li>
+      <li class="number">4</li>
+      <li class="number">5</li>
+    </header>
   </body>
 </html>
