--- a/TOP/brojs/index.html
+++ b/TOP/brojs/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <label class="count">0</label><br>
+    <button class="increment">Increment</button>
+    <button class="decrease">decrease</button>
 
     <script src="script.js"></script>
 </body>
