--- a/TOP/intermediate-html/ls2/index.html
+++ b/TOP/intermediate-html/ls2/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-
+<div class="balls">The balls were <em>literally</em><strong>Dripping</strong></div>
 <script src="script.js"></script>
 </body>
 </html>
