--- a/TOP/brojs/index.html
+++ b/TOP/brojs/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="myBox">POOP!</div>
     <script src="script.js"></script>
 </body>
 </html>
