--- a/TOP/intermediate-html/morecssproperties/index.html
+++ b/TOP/intermediate-html/morecssproperties/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="title">New CSS Properties page</div>
+    <div class="border">I have a border, an outline, and a box shadow! Amazing, isn't it?</div>
     <script src="script.js"></script>
 </body>
 </html>
