--- a/TOP/css-positioning/index.html
+++ b/TOP/css-positioning/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <span class="bodie">bodie</span>
+    <div class="title"> had that package on him yo!</div>
+    <div class="middle">Aint no way you caught <a href="" class="bark">bark</a> and his boys in the crib</div>
+    <div class="last">I'm telling you all I know who is the mastermind behind this it's <a href="" class="stringer">Stringer</a></div>
 </body>
+
 </html>
