--- a/TOP/forms/index.html
+++ b/TOP/forms/index.html
@@ -7,7 +7,88 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <select id="simple" name="simple">
+  <option value="banana">Big, beautiful yellow banana</option>
+  <option value="cherry">Succulent, juicy cherry</option>
+  <option value="lemon">Sharp, powerful lemon</option>
+</select>
+
+
+<label for="myFruit">What's your favorite fruit?</label>
+<input type="text" name="myFruit" id="myFruit" list="mySuggestion" />
+<datalist id="mySuggestion">
+  <option>Apple</option>
+  <option>Banana</option>
+  <option>Blackberry</option>
+  <option>Blueberry</option>
+  <option>Lemon</option>
+  <option>Lychee</option>
+  <option>Peach</option>
+  <option>Pear</option>
+</datalist>
+
+
+<label for="temp">Choose a comfortable temperature:</label><br />
+<input type="range" id="temp" name="temp" list="markers" />
+
+<datalist id="markers">
+  <option value="0"></option>
+  <option value="25"></option>
+  <option value="50"></option>
+  <option value="75"></option>
+  <option value="100"></option>
+</datalist>
+
+<meter value="10" min="0" low="30" high="80" max="100" optimum="90"></meter>
+<br>
+<br>
+<progress max="100" value="30"></progress>
+ -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--     <form>
         <h1>Payment form</h1>
         <p>
           Required fields are followed by
@@ -88,13 +169,14 @@
           type="text"
           id="expiration"
           name="expiration"
+          readonly
           required
           placeholder="MM/YY"
           pattern="^(0[1-9]|1[0-2])\/([0-9]{2})$" />
           </p>
         </section>
     </form>
-
+ -->
 
 
 
