--- a/TOP/forms/index.html
+++ b/TOP/forms/index.html
@@ -7,11 +7,64 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header class='speaker-form-header'>
+      <h1>Speaker Submission</h1>
+      <p>
+        <em>Want to speak at our fake conference? Fill out this form.</em>
+      </p>
+</header>
+<form action='' method='get' class='speaker-form'>
+  <div class='form-row'>
+  <label for='full-name'>Name</label>
+  <input id='full-name' name='full-name' type='text'/>
+</div>
+  <div>
+  <label for="email">Email</label>
+  <input type="email" name="mail" id="email">
+</div>
+<fieldset class='legacy-form-row'>
+  <legend>Type of Talk</legend>
+  <input id='talk-type-1'
+         name='talk-type'
+         type='radio'
+         value='main-stage' />
+  <label for='talk-type-1' class='radio-label'>Main Stage</label>
+  <input id='talk-type-2'
+         name='talk-type'
+         type='radio'
+         value='workshop'
+         checked />
+  <label for='talk-type-2' class='radio-label'>Workshop</label>
+</fieldset>
+
+</form>
 
 
 
-<form>
-  <h1>to: Mozilla</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <form>
+  <h1>to: Priscialla</h1>
 
   <div id="from">
     <label for="name">from:</label>
@@ -31,7 +84,7 @@
   <div class="button">
     <button type="submit">Send your message</button>
   </div>
-</form>
+</form> -->
 
 
 
