--- a/TOP/grid/index.html
+++ b/TOP/grid/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Create a grid by having a parent and child -->
+  <div>Grid</div>    <!-- Create a grid by having a parent and child -->
 </body>
 </html>
